
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int banner () ;
 int exit (int) ;
 int printf (char*,...) ;
 char** targets ;

void usage(char *prog) {
  int i;
  banner();
  printf("- Usage: %s <target ip> <OS> [target port]\n", prog);
  printf("- Targets:\n");
  for (i=0; targets[i] != ((void*)0); i++)
 printf("\t- %d\t%s\n", i, targets[i]);
  printf("\n");

  exit(1);
}
